# cpp-template

./: .codedocs  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
doc/: CMakeLists.txt  Doxyfile.in
include/My_Template/: config.hpp.in  hello_world.hpp
scripts/: build.sh  configure.sh  coverage.sh  doc.sh  project.config  run.sh  setup.sh  test.sh
src/: factorial.cpp  hello_world.cpp  main.cpp
test/: CMakeLists.txt  factorial_test.cpp  hello_world_test.cpp
